--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://alokknight.github.io/text-analysis",
+  "homepage": "http://alokknight.github.io/text-analysis",
   "name": "text-analysis",
   "version": "0.1.0",
   "private": true,
