--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "alokknight",
-  "homepage": "https://alokknight.github.io/text-analysis",
+  "homepage": "https://www.alokknight.com/textanalysis",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
