--- a/package.json
+++ b/package.json
@@ -8,10 +8,11 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.6.2",
     "react": "^17.0.2",
     "react-circular-progressbar": "^2.0.4",
     "react-dom": "^17.0.2",
-    "react-router-dom": "^5.2.0",
+    "react-router-dom": "^6.20.0",
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.4"
   },
