package.json updated

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "alokknight",
+  "name": "textanalysis",
   "homepage": "https://www.alokknight.com/textanalysis",
   "version": "0.1.0",
   "private": true,
